# image-scraper

./: .gitignore  Data Scapping from websites ( pictures ).py  README.md  app.py  pyproject.toml  pythonanywhere_wsgi.py  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml  scrape-request.yml
.github/workflows/: pages.yml  process-request.yml  scrape-images.yml  test.yml
docs/: index.html
docs/latest/: index.html
latest/: index.html
local-test-output/: manifest.json
requests/: index.html
src/image_scraper/: __init__.py  cli.py  gallery.py  request.py  scraper.py
templates/: index.html
tests/: test_gallery.py  test_request.py  test_scraper.py
